syntax = "proto3";
package kratos.api;

option go_package = "github.com/menta2k/lcm/internal/conf;conf";
message LCM {
  string data_dir = 1;
  int32 default_validity_days = 2; // default validity period for client certificates
  bool auto_approve_certificates = 3; // true = automatic, false = manual approval required
  bool auto_generate_ca = 4; // true = generate CA if not exists
  Vault vault = 5;
  string shared_secret = 6; // Global shared secret for certificate requests
  string ca_cert_path = 7; // Path to CA certificate file
  string ca_key_path = 8; // Path to CA private key file
  RenewalConfig renewal = 9; // Automatic certificate renewal configuration
  EventConfig events = 10; // Event notification configuration
  WebhookConfig webhooks = 11; // Webhook notification configuration
}

// Configuration for event notifications via Redis pub/sub
message EventConfig {
  bool enabled = 1; // Enable/disable event publishing
  string topic_prefix = 2; // Prefix for all event topics (default: "lcm")
}

// Configuration for automatic certificate renewal
message RenewalConfig {
  bool enabled = 1; // Enable/disable automatic renewal
  int32 check_interval_seconds = 2; // How often to scan for certificates due for renewal (default: 3600 = 1 hour)
  int32 worker_count = 3; // Number of concurrent renewal workers (default: 2)
  int32 lock_timeout_seconds = 4; // Worker lock timeout for distributed processing (default: 300 = 5 min)
  int32 default_days_before_expiry = 5; // Default days before expiry to trigger renewal (default: 30)
  int32 retry_max_attempts = 6; // Maximum retry attempts for failed renewals (default: 3)
  int32 retry_interval_seconds = 7; // Delay between retry attempts (default: 3600 = 1 hour)
  int32 batch_size = 8; // Number of certificates to process per batch (default: 100)
}
message Vault {
  string role_id = 1;
  string secret_id = 2;
  string url = 3;
  string secret_engine = 4;
  string cert_prefix = 5;
  string token_prefix = 6;
  string mount_path = 7;
  int32 retry_max = 8;
  int32 retry_wait_min = 9;
  int32 retry_wait_max = 10;
}

// Configuration for webhook notifications
message WebhookConfig {
  bool enabled = 1; // Enable/disable webhook notifications
  int32 timeout_seconds = 2; // HTTP request timeout (default: 30)
  int32 worker_count = 3; // Number of concurrent webhook workers (default: 2)
  WebhookRetryConfig retry = 4; // Retry configuration
  repeated WebhookEndpoint endpoints = 5; // List of webhook endpoints
}

// Webhook endpoint configuration
message WebhookEndpoint {
  string name = 1; // Unique identifier for the endpoint
  string url = 2; // Webhook URL
  bool enabled = 3; // Enable/disable this endpoint
  repeated string event_types = 4; // List of event types to subscribe to (empty = all)
  string secret = 5; // HMAC secret for signing payloads
  map<string, string> headers = 6; // Additional HTTP headers
}

// Webhook retry configuration
message WebhookRetryConfig {
  int32 max_attempts = 1; // Maximum retry attempts (default: 3)
  int32 initial_delay_ms = 2; // Initial retry delay in milliseconds (default: 1000)
  int32 max_delay_ms = 3; // Maximum retry delay in milliseconds (default: 60000)
  float backoff_multiplier = 4; // Backoff multiplier (default: 2.0)
}
